# voxelworld

./: .gitignore  Cargo.toml  README.md  build-release-windows.bat  build-release.sh  build.rs  cfg.impfile
assets/: block_drops.impfile  block_info.impfile  credits.txt  furnace.impfile  item_aliases.impfile  leftovers.impfile  recipes.impfile  shaders.impfile  textures.impfile
assets/shaders/: chunkfrag.glsl  chunkvert.glsl  cloudfrag.glsl  cloudvert.glsl  droppedblockvert.glsl  fluidfrag.glsl  fluidvert.glsl  gradientfrag.glsl  iconfrag.glsl  nonvoxelfrag.glsl  nonvoxelvert.glsl  orthographic.glsl  outlinefrag.glsl  quad3d.glsl  quadfrag.glsl  quadvert.glsl  quadvert3d.glsl  skyboxfrag.glsl  skyboxvert.glsl  skyfrag.glsl  skyquad.glsl  starvert.glsl  tintedspritefrag.glsl  vert.glsl  vert2d.glsl
src/: assets.rs  bin_data.rs  game.rs  gfx.rs  gui.rs  impfile.rs  main.rs  voxel.rs
src/assets/: shader.rs  texture.rs
src/bin_data/: tests.rs
src/game/: assets.rs  block_menu.rs  camera.rs  crafting.rs  entities.rs  gameloop.rs  input.rs  inventory.rs  inventory_screen.rs  load.rs  physics.rs  player.rs  save.rs  settings.rs  update.rs
src/gfx/: buildchunk.rs  chunk.rs  chunktable.rs  display.rs  face_data.rs  fluid.rs  frustum.rs  models.rs  nonvoxel.rs
src/gui/: create_world_menu.rs  credits_screen.rs  death_screen.rs  debug.rs  main_menu.rs  pause_menu.rs  select_world_menu.rs  settings_screen.rs
src/impfile/: tests.rs
src/voxel/: block_info.rs  build.rs  chunk.rs  coordinates.rs  flags.rs  is_valid.rs  light.rs  region.rs  tile_data.rs  world.rs
(+53 files in other folders)
