[package]
name = "voxelworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
egui_gl_glfw = "0.1.5"
fastrand = "2.1.1"
gl = "0.14.0"
glfw = "0.58.0"
noise = "0.9.0"
png = "0.17.13"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
